# tsumeshogi-solver

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
benches/: bench.rs
dfpn/: Cargo.toml
dfpn-extended/: Cargo.toml
dfpn-extended/src/: cancelable_searcher.rs  lib.rs  search_or_cancel.rs
dfpn-solver/: Cargo.toml
dfpn-solver/src/: default_solver.rs  dfpn.rs  generate_moves.rs  impl_default_hash.rs  impl_extended_solver.rs  impl_hashmap.rs  impl_hashmap_table.rs  impl_naive_hash.rs  impl_naive_position.rs  impl_normal_solver.rs  impl_solver.rs  impl_vec_table.rs  impl_zobrist_hash.rs  lib.rs  position.rs  solve.rs  solver.rs  types.rs
dfpn/src/: default_searcher.rs  impl_hashmap_table.rs  lib.rs  node.rs  search.rs  searcher.rs  traits.rs  types.rs
shogi-converter/: Cargo.toml
shogi-converter/src/: csa_converter.rs  kif_converter.rs  lib.rs  sfen_converter.rs
solver/: Cargo.toml
solver/src/: dfpn_extended.rs  lib.rs  solve.rs  solver.rs
solver/src/dfpn_extended/: cancelable_searcher.rs  search_or_cancel.rs
solver/src/implementations/: hashmap_table.rs  vec_table.rs  yasai_position.rs
src/: backend.rs  impl_shogi.rs  impl_yasai.rs  implementations.rs  lib.rs  main.rs  solver.rs
src/backend/: mod.rs  shogi.rs  yasai.rs
src/implementations/: hashmap_table.rs  yasai_position.rs
src/solver/implementations/: vec_table.rs  yasai_position.rs
