[package]
name = "tsumeshogi-solver"
version = "0.6.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solver = { path = "./solver" }
clap = { version = "3.2", features = ["derive"] }
thiserror = "1.0"
encoding_rs = "0.8.31"
shogi_core = "0.1.4"
shogi_usi_parser = "0.1.0"
shogi_official_kifu = "0.1.1"
shogi-kifu-converter = "0.2.0"

[dev-dependencies]
dfpn = { path = "./dfpn" }

[profile.release]
lto = true

[workspace]
members = [
    "solver",
]
