[package]
name = "dfpn-solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shogi = "0.12.0"
yasai = { git = "https://github.com/sugyan/yasai", tag = "0.1.3" }
rand = { version = "0.8.4", features = ["small_rng"] }
