[package]
name = "solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dfpn = { path = "../dfpn" }
dfpn-extended = { path = "../dfpn-extended" }
shogi_core = "0.1.4"
num-traits = "0.2.15"
yasai = { git = "https://github.com/sugyan/yasai", tag = "0.5.0", features = ["simd"] }

[dev-dependencies]
shogi_usi_parser = "0.1.0"
